--- a/template/chat.ejs
+++ b/template/chat.ejs
@@ -1,12 +1,12 @@
 <% layout('layout/page') -%>
-<% block('title', "Чат") -%>
+<% block('title', "Chat") -%>
 
 <script src="\vendor\bower_components\socket.io-client\dist\socket.io.js"></script>
 
 <div id="room">
   <ul class="list-unstyled"></ul>
   <form>
-    <input disabled class="form-control" autocomplete="off" autofocus placeholder="Сообщение...">
+    <input disabled class="form-control" autocomplete="off" autofocus placeholder="Message...">
   </form>
 </div>
 
