--- a/template/error.ejs
+++ b/template/error.ejs
@@ -1,6 +1,6 @@
 <% layout('/layout/page') -%>
 <% block('title', error.message) -%>
 
-<p>Извините, произошла ошибка.</p>
+<p>Something went wrong!</p>
 
 <p><%=error.message%></p>
