--- a/template/frontpage.ejs
+++ b/template/frontpage.ejs
@@ -1,4 +1,4 @@
 <% layout('layout/page') -%>
-<% block('title', 'Привет!!!'); -%>
+<% block('title', 'Home'); -%>
 
-<p class="lead">Всем привет!</p>
+<p class="lead">Welcome to Chat!</p>
