--- a/template/login.ejs
+++ b/template/login.ejs
@@ -1,26 +1,26 @@
 <% layout('layout/page') -%>
-<% block('title', "Вход") -%>
+<% block('title', "Log in") -%>
 
-<p>Введите имя пользователя и пароль.</p>
+<p>Enter Login and Password</p>
 
 <form class="form-horizontal login-form" name="login-form">
   <div class="form-group">
-    <label for="input-username" class="col-lg-2 control-label">Имя</label>
+    <label for="input-username" class="col-lg-2 control-label">Login</label>
 
     <div class="col-lg-10">
-      <input name="username" value="name" type="text" class="form-control" id="input-username" placeholder="Имя">
+      <input name="username" value="name" type="text" class="form-control" id="input-username" placeholder="Login">
     </div>
   </div>
   <div class="form-group">
-    <label for="input-password" class="col-lg-2 control-label">Пароль</label>
+    <label for="input-password" class="col-lg-2 control-label">Password</label>
 
     <div class="col-lg-10">
-      <input name="password" value="pass" type="password" class="form-control" id="input-password" placeholder="Пароль">
+      <input name="password" value="pass" type="password" class="form-control" id="input-password" placeholder="Password">
     </div>
   </div>
   <div class="form-group">
     <div class="col-lg-offset-2 col-lg-10">
-      <button type="submit" class="btn btn-primary" data-loading-text="Отправляю...">Войти</button>
+      <button type="submit" class="btn btn-primary" data-loading-text="Loading...">Войти</button>
       <span class="help-block error"></span>
     </div>
   </div>
