Backslashes changed to normal

--- a/template/chat.ejs
+++ b/template/chat.ejs
@@ -1,7 +1,7 @@
 <% layout('layout/page') -%>
 <% block('title', "Chat") -%>
 
-<script src="\vendor\bower_components\socket.io-client\dist\socket.io.js"></script>
+<script src="/vendor/bower_components/socket.io-client/dist/socket.io.js"></script>
 
 <div id="room">
   <ul class="list-unstyled"></ul>
