Now chat template works with requirejs

--- a/template/chat.ejs
+++ b/template/chat.ejs
@@ -1,8 +1,6 @@
 <% layout('layout/page') -%>
 <% block('title', "Chat") -%>
 
-<script src="/vendor/bower_components/socket.io-client/dist/socket.io.js"></script>
-
 <div id="room">
   <ul class="list-unstyled"></ul>
   <form>
@@ -11,7 +9,9 @@
 </div>
 
 <script>
-    $(function() {
-        Chat.initializeSocket();
-    });
+require(['jquery', 'chat'], function( $, chat ) {
+        $(function() {
+          chat.initializeSocket();
+        });
+});
 </script>
