--- a/template/layout/page.ejs
+++ b/template/layout/page.ejs
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="/vendor/bower_components/bootstrap/dist/css/bootstrap.css"/>
   <link rel="stylesheet" href="/css/app.css"/>
 
-  <script src="/vendor/bower_components/jquery/dist/jquery.js"></script>
-  <script src="/vendor/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="js/requirejs-config.js"></script>
+  <script src="/vendor/bower_components/requirejs/require.js"></script>
+
 </head>
 <body>
 <header>
