--- a/template/layout/page.ejs
+++ b/template/layout/page.ejs
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="/css/app.css"/>
 
   <script src="/vendor/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/vendor/bower_components/jquery.validation/dist/jquery.validate.js"></script>
   <script src="/vendor/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="/js/util.js"></script>
   <script src="/js/main.js"></script>
 </head>
 <body>
