--- a/template/login.ejs
+++ b/template/login.ejs
@@ -8,22 +8,24 @@
     <label for="input-username" class="col-lg-2 control-label">Login</label>
 
     <div class="col-lg-10">
-      <input name="username" value="name" type="text" class="form-control" id="input-username" placeholder="Login">
+      <input name="username" type="text" class="form-control" id="input-username" placeholder="Login" required data-rule-required="true">
     </div>
   </div>
   <div class="form-group">
     <label for="input-password" class="col-lg-2 control-label">Password</label>
 
     <div class="col-lg-10">
-      <input name="password" value="pass" type="password" class="form-control" id="input-password" placeholder="Password">
+      <input name="password" type="password" class="form-control" id="input-password" placeholder="Password" required data-rule-required="true">
     </div>
   </div>
   <div class="form-group">
     <div class="col-lg-offset-2 col-lg-10">
-      <button type="submit" class="btn btn-primary" data-loading-text="Loading...">Войти</button>
+      <button type="submit" class="btn btn-primary" data-loading-text="Loading...">Log In</button>
       <span class="help-block error"></span>
     </div>
   </div>
+
+    <div class="status"></div>
 </form>
 
 <script>
