--- a/template/signup.ejs
+++ b/template/signup.ejs
@@ -8,14 +8,14 @@
         <label for="input-username" class="col-lg-2 control-label">Login</label>
 
         <div class="col-lg-10">
-            <input name="username" value="name" type="text" class="form-control" id="input-username" placeholder="Name">
+            <input name="username" type="text" class="form-control" id="input-username" placeholder="Name">
         </div>
     </div>
     <div class="form-group">
         <label for="input-password" class="col-lg-2 control-label">Password</label>
 
         <div class="col-lg-10">
-            <input name="password" value="pass" type="password" class="form-control" id="input-password" placeholder="Password">
+            <input name="password" type="password" class="form-control" id="input-password" placeholder="Password">
         </div>
     </div>
     <div class="form-group">
@@ -35,6 +35,8 @@
             <span class="help-block error"></span>
         </div>
     </div>
+
+    <div class="status"></div>
 </form>
 
 <script>
