--- a/template/login.ejs
+++ b/template/login.ejs
@@ -8,14 +8,14 @@
     <label for="input-username" class="col-lg-2 control-label">Login</label>
 
     <div class="col-lg-10">
-      <input name="username" type="text" class="form-control" id="input-username" placeholder="Login" required>
+      <input name="username" type="text" class="form-control" id="input-username" placeholder="Login">
     </div>
   </div>
   <div class="form-group">
     <label for="input-password" class="col-lg-2 control-label">Password</label>
 
     <div class="col-lg-10">
-      <input name="password" type="password" class="form-control" id="input-password" placeholder="Password" required>
+      <input name="password" type="password" class="form-control" id="input-password" placeholder="Password">
     </div>
   </div>
   <div class="form-group">
