Added socket angular service

--- a/template/layout/page.ejs
+++ b/template/layout/page.ejs
@@ -10,7 +10,9 @@
     <script src="/vendor/bower_components/angular/angular.min.js"></script>
     <script src="/vendor/bower_components/socket.io-client/dist/socket.io.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/services/socket.js"></script>
     <script src="/js/controllers/loginController.js"></script>
+    <script src="/js/controllers/chatController.js"></script>
 </head>
 
 <body ng-app="Chat">
