--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,10 @@
+#input-color {
+    height: 34px;
+    color: #555;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
 .nickname {
     font-weight: bold;
 }
